2017-01-08  Danilo Chang

    * Add tkvlc::setVolume and tkvlc::getVolume command

2017-01-05  Danilo Chang

    * Bump version to 0.2
    * Fix build fail on Windows platform
    * Update README.md

2017-01-04  Danilo Chang

    * Implement commands
    * configure.ac: add libvlc library link 
    * Update package name

2017-01-03  Danilo Chang

    * Dump sample extension
